--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
+    "multer": "^1.4.2",
     "util": "^0.12.3"
   }
 }
